# NuEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  compile_win.bat
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.hpp
Engine/Core/Application/: Application.cpp  Application.hpp
Engine/Core/Errors/: FileSystemError.hpp  GraphicsError.hpp  SystemError.hpp  WindowError.hpp
Engine/Core/IO/: FileSystem.cpp  FileSystem.hpp
Engine/Core/Logging/: Logger.cpp  Logger.hpp
Engine/Core/Timer/: Time.cpp  Time.hpp
Engine/Core/Types/: Result.hpp  Types.hpp
Engine/Graphics/API/: GraphicsDevice.hpp  IGraphicsDevice.hpp
Engine/Graphics/Abstractions/: GraphicsFactory.cpp  GraphicsFactory.hpp  IGraphicsContext.hpp  IRenderDevice.hpp
Engine/Graphics/Backends/OpenGL/Context/: OpenGLContext.cpp  OpenGLContext.hpp
Engine/Graphics/Backends/OpenGL/Device/: OpenGLDevice.cpp  OpenGLDevice.hpp
Engine/Graphics/Backends/OpenGL/Factory/: OpenGLFactory.cpp  OpenGLFactory.hpp
Engine/Graphics/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLLoader.cpp  OpenGLLoader.hpp
Engine/Graphics/OpenGL/Mesh/: Mesh.cpp  Mesh.hpp
Engine/Graphics/OpenGL/Shaders/: Shader.cpp  Shader.hpp
Engine/Math/: CMakeLists.txt  NuMath.hpp  README.md
Engine/Math/Core/include/: Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Engine/Math/Core/src/: Matrix4x4.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Engine/Math/SIMD/: SIMD_SSE.hpp
Engine/Math/include/Math/: Math.hpp  StorageTypes.hpp
Engine/NuMath/: CMakeLists.txt  NuMath.hpp
Engine/NuMath/SIMD/: SIMDBackend.hpp  SIMDScalar.hpp  SIMD_SSE.hpp
Engine/Platform/: IWindow.cpp  IWindow.hpp  Window.cpp  Window.hpp
Engine/Platform/Common/: WindowConfig.hpp  WindowEvents.hpp  WindowManager.hpp
Engine/Platform/Windows/: OpenGLContextWin32.cpp  OpenGLContextWin32.hpp  WindowWin32.cpp  WindowWin32.hpp
Engine/Renderer/Pipeline/: ForwardPipeline.cpp  ForwardPipeline.hpp
Game/: CMakeLists.txt  main.cpp
Game/source/: SandboxApp.cpp
NBT/: README.md  (+3 more)
NuEditor/: CMakeLists.txt  EditorWindow.hpp  NuOpenGLWidget.cpp  NuOpenGLWidget.hpp  editorwindow.cpp  editorwindow.ui  main.cpp
NuEditor/resources/: resources.qrc
NuEditor/resources/themes/: arctic_slate.qss  base.qss  warm_ember.qss
NuEditor/source/App/: EditorWindow.cpp  EditorWindow.hpp  ResizableWindow.cpp  ResizableWindow.hpp  main.cpp
NuEditor/source/Core/: EditorPreferences.hpp  EditorState.hpp  ThemeManager.cpp  ThemeManager.hpp
NuEditor/source/Runtime/: EditorRuntime.cpp  EditorRuntime.hpp  GameLoader.cpp  GameLoader.hpp
NuEditor/source/UI/: EditorUI.cpp  EditorUI.hpp
NuEditor/source/UI/Panels/: ConsolePanel.cpp  ConsolePanel.hpp  ContentDrawerPanel.cpp  ContentDrawerPanel.hpp  CustomTitleBar.cpp  CustomTitleBar.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MainMenuBar.cpp  MainMenuBar.hpp  MainToolBar.cpp  MainToolBar.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
NuEditor/source/UI/Widgets/: SearchLineEdit.cpp  SearchLineEdit.hpp
NuEditor/source/UI/Windows/: SettingsWindow.cpp  SettingsWindow.hpp
NuEditor/source/Viewport/: EditorViewportHost.cpp  EditorViewportHost.hpp  NuOpenGLWidget.cpp  NuOpenGLWidget.hpp
NuEditor/source/Weave/: WeaveCompiler.cpp  WeaveCompiler.hpp  WeaveGraphScene.cpp  WeaveGraphScene.hpp  WeaveGraphView.cpp  WeaveGraphView.hpp  WeaveSerializer.cpp  WeaveSerializer.hpp  WeaveToolBar.cpp  WeaveToolBar.hpp  WeaveWindow.cpp  WeaveWindow.hpp
NuEditor/source/Weave/Utils/: WeaveCommands.hpp
NuEngine/: CMakeLists.txt  NuEngine.hpp
NuEngine/Core/: API.hpp
NuEngine/Core/Errors/: FileSystemError.hpp
NuEngine/Core/IO/: FileSystem.cpp  FileSystem.hpp
NuEngine/Core/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
NuEngine/Core/Logging/: Logger.cpp  Logger.hpp
NuEngine/Core/Memory/: AlignedAllocator.hpp  MemoryManager.hpp
NuEngine/Core/Profiling/: Profiler.hpp
NuEngine/Core/Resources/: ResourceManager.hpp
NuEngine/Core/Threading/: JobSystem.cpp  JobSystem.hpp
NuEngine/Core/Timer/: Time.cpp  Time.hpp
NuEngine/Core/Types/: AppError.hpp  ErrorContext.hpp  Result.hpp  Types.cpp  Types.hpp
NuEngine/ECS/: Components.hpp  Entity.hpp
NuEngine/Graphics/Abstractions/: BufferLayout.hpp  GraphicsFactory.cpp  GraphicsFactory.hpp  IGraphicsContext.hpp  IIndexBuffer.hpp  IRenderDevice.hpp  IShader.hpp  ITexture.hpp  IVertexArray.hpp  IVertexBuffer.hpp
NuEngine/Graphics/Abstractions/Buffers/: IVertexArray.hpp  IVertexBuffer.hpp
NuEngine/Graphics/Abstractions/Core/: GraphicsFactory.cpp  GraphicsFactory.hpp  IRenderDevice.hpp
NuEngine/Graphics/Abstractions/Shaders/: IShader.hpp
NuEngine/Graphics/Errors/: GraphicsError.hpp
NuEngine/NuMath/: CMakeLists.txt  NuMath.natvis  README.md
NuEngine/NuMath/include/NuMath/: NuMath.hpp
NuEngine/Physics/Bodies/: RigidBody.hpp  RigigBody.cpp
NuEngine/Physics/Core/: PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsLayers.hpp  PhysicsUtils.hpp
NuEngine/Physics/Errors/: PhysicsError.hpp
NuEngine/Platform/: IWindow.cpp  IWindow.hpp
NuEngine/Platform/Common/: WindowConfig.hpp  WindowEvents.cpp  WindowEvents.hpp
NuEngine/Platform/Errors/: WindowError.hpp
NuEngine/Platform/Linux/: WindowX11.hpp
NuEngine/Platform/MacOS/: WindowCocoa.hpp
NuEngine/Platform/Windows/: WindowWin32.cpp  WindowWin32.hpp
NuEngine/Renderer/: Camera.cpp  Camera.hpp
NuEngine/Renderer/Pipeline/: DeferredPipeline.hpp  ForwardPipeline.cpp  ForwardPipeline.hpp
NuEngine/Renderer/Pipelines/Forward/: ForwardPipeline.cpp  ForwardPipeline.hpp
NuEngine/Runtime/: Application.cpp  Application.hpp  EntryPoint.hpp
NuEngine/Runtime/Errors/: EngineError.hpp
NuEngine/Runtime/Scene/: Scene.cpp  Scene.hpp
NuEngine/Weave/: NativeRegistry.cpp  NativeRegistry.hpp  WeaveChunk.hpp  WeaveChunkSystem.hpp  WeaveComponent.hpp  WeaveScriptSystem.hpp  WeaveTypes.hpp
Tests/: CMakeLists.txt  main.cpp  testMain.cpp
Tests/NuBenchmarks/: CMakeLists.txt  main.cpp
Tests/NuUnitTests/: CMakeLists.txt
Tests/Unit/: TestVector3.cpp
(+164 files in other folders)
